--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <div class="container">
     <!-- Section 1: Fullscreen video -->
     <section>
-      <video src="video1.mp4" autoplay muted loop class="animate"></video>
+      <video src="compilated.mp4" autoplay muted loop class="animate"></video>
     </section>
 
     <!-- Section 2: 1280x720 image -->
     <section>
-      <img src="image1.jpg" alt="Portfolio Image" class="animate">
+      <img src="Flex Media.jpg" alt="Portfolio Image" class="animate">
     </section>
 
     <!-- Section 3: Another 16:9 video -->
     <section>
-      <video src="video2.mp4" autoplay muted loop class="animate"></video>
+      <video src="compilated.mp4" autoplay muted loop class="animate"></video>
     </section>
 
     <!-- Section 4: 4 x 9:16 videos side by side -->
