--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <div class="container">
     <!-- Section 1: Fullscreen video (16:9) -->
     <section class="fullscreen-section">
-      <video src="video1.mp4" autoplay muted loop class="video-16-9 animate"></video>
+      <video src="compilated.mp4" autoplay muted loop class="video-16-9 animate"></video>
     </section>
 
     <!-- Section 2: Image (1280x720 px) -->
     <section class="image-section">
-      <img src="image1.jpg" alt="Portfolio Image" class="image-1280-720 animate">
+      <img src="Flex Media.png" alt="Portfolio Image" class="image-1280-720 animate">
     </section>
 
     <!-- Section 3: Another fullscreen video (16:9) -->
     <section class="fullscreen-section">
-      <video src="video2.mp4" autoplay muted loop class="video-16-9 animate"></video>
+      <video src="compilated.mp4" autoplay muted loop class="video-16-9 animate"></video>
     </section>
 
     <!-- Section 4: Four 9:16 videos side by side -->
