--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,28 +9,28 @@
 </head>
 <body>
   <div class="container">
-    <!-- Section 1: Fullscreen video (16:9) -->
-    <section class="fullscreen-section">
-      <video src="compilated.mp4" autoplay muted loop class="video-16-9 animate"></video>
+    <!-- Section 1: Fullscreen video -->
+    <section>
+      <video class="video-16-9 animate" src="compilated.mp4" autoplay muted loop></video>
     </section>
 
-    <!-- Section 2: Image (1280x720 px) -->
-    <section class="image-section">
-      <img src="Flex Media.png" alt="Portfolio Image" class="image-1280-720 animate">
+    <!-- Section 2: 1280x720 image -->
+    <section>
+      <img class="image-1280-720 animate" src="Flex Media.jpg" alt="Portfolio Image">
     </section>
 
-    <!-- Section 3: Another fullscreen video (16:9) -->
-    <section class="fullscreen-section">
-      <video src="compilated.mp4" autoplay muted loop class="video-16-9 animate"></video>
+    <!-- Section 3: Another 16:9 video -->
+    <section>
+      <video class="video-16-9 animate" src="video2.mp4" autoplay muted loop></video>
     </section>
 
-    <!-- Section 4: Four 9:16 videos side by side -->
-    <section class="vertical-grid-section">
+    <!-- Section 4: 4 x 9:16 videos side by side -->
+    <section>
       <div class="vertical-grid animate">
-        <video src="video3.mp4" autoplay muted loop class="video-9-16"></video>
-        <video src="video4.mp4" autoplay muted loop class="video-9-16"></video>
-        <video src="video5.mp4" autoplay muted loop class="video-9-16"></video>
-        <video src="video6.mp4" autoplay muted loop class="video-9-16"></video>
+        <video class="video-9-16" src="video3.mp4" autoplay muted loop></video>
+        <video class="video-9-16" src="video4.mp4" autoplay muted loop></video>
+        <video class="video-9-16" src="video5.mp4" autoplay muted loop></video>
+        <video class="video-9-16" src="video6.mp4" autoplay muted loop></video>
       </div>
     </section>
   </div>
