--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div class="container">
         <div class="video-section video-top">
             <video autoplay muted loop>
-                <source src="your-video-top.mp4" type="video/mp4">
+                <source src="compilated.mp4" type="video/mp4">
             </video>
         </div>
         <div class="image-section">
-            <img src="your-image.jpg" alt="Portfolio Image">
+            <img src="Flex Media.png" alt="Portfolio Image">
         </div>
         <div class="video-section video-middle">
             <video autoplay muted loop>
-                <source src="your-video-middle.mp4" type="video/mp4">
+                <source src="compilated.mp4" type="video/mp4">
             </video>
         </div>
         <div class="video-grid">
