--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
 
   <!-- Fullscreen Video Section -->
   <section class="section video-container fade-in">
-    <video src="your-4k-video.mp4" autoplay muted loop playsinline></video>
+    <video src="compilated.mp4" autoplay muted loop playsinline></video>
   </section>
 
   <!-- Image Section -->
   <section class="section image-container fade-in">
-    <img src="your-image-1280x720.jpg" alt="Portfolio Image">
+    <img src="Flex Media.jpg" alt="Portfolio Image">
   </section>
 
   <!-- 16:9 Video Section -->
   <section class="section video-container fade-in">
-    <video src="your-16x9-video.mp4" autoplay muted loop playsinline></video>
+    <video src="compilated.mp4" autoplay muted loop playsinline></video>
   </section>
 
   <!-- 9:16 Videos Grid Section -->
