--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
 <body>
 
   <section class="section video-container fade-in">
-    <video src="your-4k-video.mp4" autoplay muted loop playsinline></video>
+    <video src="compilated.mp4" autoplay muted loop playsinline></video>
   </section>
 
   <section class="section image-container fade-in">
-    <img src="your-image-1280x720.jpg" alt="Portfolio Image">
+    <img src="Flex Media.png" alt="Portfolio Image">
   </section>
 
   <section class="section video-container fade-in">
-    <video src="your-16x9-video.mp4" autoplay muted loop playsinline></video>
+    <video src="compilated.mp4" autoplay muted loop playsinline></video>
   </section>
 
   <section class="section grid-container fade-in">
