--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
         width: 100%;
       }
     }
+
+    /* Padding for first video */
+    .section:first-child { 
+      padding-top: 50px; /* Adjust padding as needed */ 
+    }
+
+    /* Shrink first video */
+    .section:first-child video {
+      transform: scale(0.8); /* Adjust scale as needed */
+    }
   </style>
 </head>
 <body>
