--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       position: absolute;
       top: 20px;
       left: 20px;
-      width: 50px; /* Adjust logo size as needed */
+      width: 250px; /* 5 times the original size (50px * 5) */ 
     }
 
     /* Scroll animations */
@@ -100,7 +100,7 @@
 
     /* Padding for first video */
     .section:first-child { 
-      padding-top: 50px; /* Adjust padding as needed */ 
+      padding-top: 100px; /* Adjust padding as needed */ 
     }
 
     /* Shrink first video */
