--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     .logo {
       position: absolute;
-      top: 1px; 
-      left: 15px;
-      width: 125px; /* Original size * 0.7 = 250px * 0.7 = 175px */ 
+      top: 10px; 
+      left: 20px;
+      width: 175px; 
     }
 
     /* Scroll animations */
@@ -104,9 +104,8 @@
     }
 
     .section:first-child video {
-      transform: translateY(150px); 
+      transform: translateY(150px) scale(0.5); /* Scale to half (0.5) */
       transform-origin: top; 
-      scale: 0.6; 
     }
   </style>
 </head>
