--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     .logo {
       position: absolute;
-      top: 10px; 
-      left: 20px;
-      width: 175px; 
+      top: -30px; 
+      left: 10px;
+      width: 130px; 
     }
 
     /* Scroll animations */
@@ -104,7 +104,7 @@
     }
 
     .section:first-child video {
-      transform: translateY(150px) scale(0.5); /* Scale to half (0.5) */
+      transform: translateY(150px) scale(0.5); 
       transform-origin: top; 
     }
   </style>
@@ -114,7 +114,7 @@
   <img src="logo.png" alt="Flux Media Logo" class="logo"> 
 
   <section class="section video-container fade-in">
-    <video src="intro1.mp4" autoplay muted loop playsinline></video>
+    <video src="intro1.mp4" autoplay muted loop playsinline style="transform: translateY(150px) scale(0.5); transform-origin: top;"></video> 
   </section>
 
   <section class="section image-container fade-in">
