--- a/index.html
+++ b/index.html
@@ -104,8 +104,17 @@
     }
 
     .section:first-child video {
-      transform: translateY(150px) scale(0.5); 
+      transform: translateY(150px) scale(0.7); 
       transform-origin: top; 
+    }
+
+    /* Move second and third sections downwards */
+    .section:nth-child(2) { 
+      margin-top: 150px; 
+    }
+
+    .section:nth-child(3) { 
+      margin-top: 150px; 
     }
   </style>
 </head>
@@ -135,10 +144,38 @@
   <section class="book-meeting">
     <h2>Book a Meeting</h2>
     <p>Let's discuss your project and bring your vision to life.</p>
-    <button>Contact Us</button> 
+    <button id="contact-btn">Contact Us</button> 
   </section>
 
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
+    // EmailJS configuration
+    emailjs.init('YOUR_USER_ID'); // Replace with your actual User ID
+
+    // Get the button element
+    const contactBtn = document.getElementById('contact-btn');
+
+    // Add event listener to the button
+    contactBtn.addEventListener('click', function() {
+      // Get form data (you can add more fields as needed)
+      const name = 'Your Name'; // Replace with user input
+      const email = 'your@email.com'; // Replace with user input
+      const message = 'Your Message'; // Replace with user input
+
+      // Send the email
+      emailjs.send('your_service_id', 'your_template_id', { 
+        from_name: name,
+        to_name: 'Recipient Name', // Replace with recipient name
+        to_email: 'recipient@email.com', // Replace with recipient email
+        message: message
+      })
+      .then(function(response) {
+        alert('Email sent successfully!');
+      }, function(error) {
+        alert('Email failed to send. Error:', error);
+      });
+    });
+
     // Intersection Observer for Animations
     const sections = document.querySelectorAll('.fade-in');
 
