--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </section>
 
   <section class="section video-container fade-in">
-    <video src="compilated.mp4" autoplay muted loop playsinline></video>
+    <video src="compilated.mp4" controls muted loop playsinline></video>
   </section>
 
   <section class="section grid-container fade-in">
