--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     .logo {
       position: absolute;
-      top: -27px; 
+      top: -27px;
       left: 12px;
-      width: 145px; 
+      width: 145px;
     }
 
     /* Scroll animations */
@@ -85,7 +85,54 @@
       text-align: center;
     }
 
-    /* Responsive Design */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 400px;
+      text-align: left;
+    }
+
+    .modal-content h3 {
+      margin-top: 0;
+    }
+
+    .modal-content input,
+    .modal-content textarea,
+    .modal-content button {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    .modal-content button {
+      background-color: #222;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    .modal-content button:hover {
+      background-color: #444;
+    }
+
     @media (max-width: 768px) {
       .grid-item {
         width: calc(50% - 15px);
@@ -98,32 +145,29 @@
       }
     }
 
-    /* Padding and movement for first video */
-    .section:first-child { 
-      padding-top: 150px; 
+    .section:first-child {
+      padding-top: 150px;
     }
 
     .section:first-child video {
-      transform: translateY(150px) scale(0.7); 
-      transform-origin: top; 
+      transform: translateY(150px) scale(0.7);
+      transform-origin: top;
     }
 
-    /* Move second and third sections downwards */
-    .section:nth-child(2) { 
-      margin-top: 60px; 
+    .section:nth-child(2) {
+      margin-top: 60px;
     }
 
-    .section:nth-child(3) { 
-      margin-top: -20px; 
+    .section:nth-child(3) {
+      margin-top: -20px;
     }
   </style>
 </head>
 <body>
-
-  <img src="logo.png" alt="Flux Media Logo" class="logo"> 
+  <img src="logo.png" alt="Flux Media Logo" class="logo">
 
   <section class="section video-container fade-in">
-    <video src="intro1.mp4" autoplay muted loop playsinline style="transform: translateY(10px) scale(0.7); transform-origin: top;"></video> 
+    <video src="intro1.mp4" autoplay muted loop playsinline style="transform: translateY(10px) scale(0.7); transform-origin: top;"></video>
   </section>
 
   <section class="section image-container fade-in">
@@ -144,52 +188,78 @@
   <section class="book-meeting">
     <h2>Book a Meeting</h2>
     <p>Let's discuss your project and bring your vision to life.</p>
-    <button id="contact-btn">Contact Us</button> 
+    <button id="contact-btn">Contact Us</button>
   </section>
+
+  <div class="modal" id="booking-modal">
+    <div class="modal-content">
+      <h3>Book a Meeting</h3>
+      <input type="text" id="name" placeholder="Your Name" required>
+      <input type="email" id="email" placeholder="Your Email" required>
+      <input type="date" id="date" required>
+      <input type="time" id="time" min="10:00" max="18:00" required>
+      <textarea id="message" placeholder="Your Message" required></textarea>
+      <button id="submit-btn">Submit</button>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
-    // EmailJS configuration
-    emailjs.init('YOUR_USER_ID'); // Replace with your actual User ID
+    emailjs.init('s7byDIwtBWXaCMHBq');
 
-    // Get the button element
     const contactBtn = document.getElementById('contact-btn');
+    const modal = document.getElementById('booking-modal');
+    const submitBtn = document.getElementById('submit-btn');
 
-    // Add event listener to the button
-    contactBtn.addEventListener('click', function() {
-      // Get form data (you can add more fields as needed)
-      const name = 'Your Name'; // Replace with user input
-      const email = 'your@email.com'; // Replace with user input
-      const message = 'Your Message'; // Replace with user input
+    contactBtn.addEventListener('click', () => {
+      modal.style.display = 'flex';
+    });
 
-      // Send the email
-      emailjs.send('your_service_id', 'your_template_id', { 
+    modal.addEventListener('click', (e) => {
+      if (e.target === modal) {
+        modal.style.display = 'none';
+      }
+    });
+
+    submitBtn.addEventListener('click', () => {
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const date = document.getElementById('date').value;
+      const time = document.getElementById('time').value;
+      const message = document.getElementById('message').value;
+
+      const selectedDate = new Date(date);
+      const day = selectedDate.getDay();
+
+      if (!name || !email || !date || !time || !message) {
+        alert('All fields are required.');
+        return;
+      }
+
+      if (day === 0) {
+        alert('Meetings cannot be booked on Sundays.');
+        return;
+      }
+
+      const [hours, minutes] = time.split(':');
+      if (hours < 10 || hours > 18 || (hours == 18 && minutes > 0)) {
+        alert('Meetings can only be booked between 10:00 AM and 6:00 PM.');
+        return;
+      }
+
+      emailjs.send('service_2pp0dlj', 'template_c3t5kwf', {
         from_name: name,
-        to_name: 'Recipient Name', // Replace with recipient name
-        to_email: 'recipient@email.com', // Replace with recipient email
-        message: message
-      })
-      .then(function(response) {
-        alert('Email sent successfully!');
-      }, function(error) {
-        alert('Email failed to send. Error:', error);
+        to_name: 'Flux Media',
+        message: message,
+        date: date,
+        time: time,
+      }).then(() => {
+        alert('Meeting request sent successfully!');
+        modal.style.display = 'none';
+      }).catch((error) => {
+        alert('Failed to send meeting request. Please try again later.');
       });
     });
-
-    // Intersection Observer for Animations
-    const sections = document.querySelectorAll('.fade-in');
-
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('active');
-        }
-      });
-    }, {
-      threshold: 0.2
-    });
-
-    sections.forEach(section => observer.observe(section));
   </script>
 </body>
 </html>
