--- a/index.html
+++ b/index.html
@@ -3,41 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flux Media</title><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flux Media</title>
   <style>
-    /* General Styles */
     body {
       margin: 0;
       background-color: #000;
       overflow-x: hidden;
       font-family: Arial, sans-serif;
       text-align: center;
-      color: #fff;
     }
 
     .section {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       scroll-snap-align: center;
       position: relative;
+      margin: 0 auto;
     }
 
     .video-container, .image-container {
       width: 80%;
       max-width: 1280px;
+      height: auto;
+      text-align: center;
     }
 
     .video-container video,
     .image-container img {
       width: 100%;
+      height: auto;
       border-radius: 10px;
     }
 
     .grid-container {
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 20px;
       flex-wrap: wrap;
       padding: 0 20px;
@@ -48,6 +57,7 @@
       aspect-ratio: 9 / 16;
       overflow: hidden;
       border-radius: 10px;
+      text-align: center;
     }
 
     .grid-item video {
@@ -58,12 +68,31 @@
 
     .logo {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: -27px;
+      left: 12px;
       width: 145px;
     }
 
-    /* Modal Styles */
+    /* Scroll animations */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(50px);
+      transition: opacity 1.2s ease, transform 1.2s ease;
+    }
+
+    .fade-in.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* Book Meeting Section */
+    .book-meeting {
+      background-color: #222;
+      color: #fff;
+      padding: 50px 0;
+      text-align: center;
+    }
+
     .modal {
       display: none;
       position: fixed;
@@ -83,8 +112,7 @@
       border-radius: 10px;
       width: 90%;
       max-width: 400px;
-      text-align: left;
-      color: #000;
+      text-align: center;
     }
 
     .modal-content h3 {
@@ -113,119 +141,462 @@
       background-color: #444;
     }
 
-    @media (max-width: 768px) {
-      .grid-item {
-        width: calc(50% - 15px);
-      }
+    @media (max-width: 
+
+  <style>
+    body {
+      margin: 0;
+      background-color: #000;
+      overflow-x: hidden;
+      font-family: Arial, sans-serif;
+      text-align: center;
     }
 
-    @media (max-width: 480px) {
-      .grid-item {
-        width: 100%;
-      }
+    .section {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      scroll-snap-align: center;
+      position: relative;
+      margin: 0 auto;
     }
-  </style>
-</head>
-<body>
-  <img src="logo.png" alt="Flux Media Logo" class="logo">
 
-  <!-- Sections -->
-  <section class="section video-container">
-    <video src="intro1.mp4" autoplay muted loop playsinline></video>
-  </section>
+    .video-container, .image-container {
+      width: 80%;
+      max-width: 1280px;
+      height: auto;
+      text-align: center;
+    }
 
-  <section class="section image-container">
-    <img src="Flex Media.png" alt="Portfolio Image">
-  </section>
+    .video-container video,
+    .image-container img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
 
-  <section class="section video-container">
-    <video src="compilated.mp4" controls muted loop playsinline></video>
-  </section>
+    .grid-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      padding: 0 20px;
+    }
 
-  <section class="section grid-container">
-    <div class="grid-item"><video src="your-video-1.mp4" autoplay muted loop playsinline></video></div>
-    <div class="grid-item"><video src="your-video-2.mp4" autoplay muted loop playsinline></video></div>
-    <div class="grid-item"><video src="your-video-3.mp4" autoplay muted loop playsinline></video></div>
-    <div class="grid-item"><video src="your-video-4.mp4" autoplay muted loop playsinline></video></div>
-  </section>
+    .grid-item {<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flux Media</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #000;
+      overflow-x: hidden;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
 
-  <section class="book-meeting">
-    <h2>Book a Meeting</h2>
-    <p>Let's discuss your project and bring your vision to life.</p>
-    <button id="contact-btn">Contact Us</button>
-  </section>
+    .section {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      scroll-snap-align: center;
+      position: relative;
+      margin: 0 auto;
+    }
 
-  <!-- Modal -->
-  <div class="modal" id="booking-modal">
-    <div class="modal-content">
-      <h3>Book a Meeting</h3>
-      <input type="text" id="name" placeholder="Your Name" required>
-      <input type="email" id="email" placeholder="Your Email" required>
-      <input type="date" id="date" required>
-      <input type="time" id="time" min="10:00" max="18:00" required>
-      <textarea id="message" placeholder="Your Message" required></textarea>
-      <button id="submit-btn">Submit</button>
-    </div>
-  </div>
+    .video-container, .image-container {
+      width: 80%;
+      max-width: 1280px;
+      height: auto;
+      text-align: center;
+    }
 
-  <!-- JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script>
-    emailjs.init('YOUR_PUBLIC_KEY'); // Replace with your actual public key from EmailJS
+    .video-container video,
+    .image-container img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
 
-    const contactBtn = document.getElementById('contact-btn');
-    const modal = document.getElementById('booking-modal');
-    const submitBtn = document.getElementById('submit-btn');
+    .grid-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flux Media</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #000;
+      overflow-x: hidden;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
 
-    contactBtn.addEventListener('click', () => {
-      modal.style.display = 'flex';
-    });
+    .section {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      scroll-snap-align: center;
+      position: relative;
+      margin: 0 auto;
+    }
 
-    modal.addEventListener('click', (e) => {
-      if (e.target === modal) {
-        modal.style.display = 'none';
-      }
-    });
+    .video-container, .image-container {
+      width: 80%;
+      max-width: 1280px;
+      height: auto;
+      text-align: center;
+    }
 
-    submitBtn.addEventListener('click', () => {
-      const name = document.getElementById('name').value;
-      const email = document.getElementById('email').value;
-      const date = document.getElementById('date').value;
-      const time = document.getElementById('time').value;
-      const message = document.getElementById('message').value;
+    .video-container video,
+    .image-container img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
 
-      const selectedDate = new Date(date);
-      const day = selectedDate.getDay();
+    .grid-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      padding: 0 20px;
+    }
 
-      if (!name || !email || !date || !time || !message) {
-        alert('All fields are required.');
-        return;
-      }
+    .grid-item {
+      width: calc(25% - 15px);
+      aspect-ratio: 9 / 16;
+      overflow: hidden;
+      border-radius: 10px;
+      text-align: center;
+    }
 
-      if (day === 0) {
-        alert('Meetings cannot be booked on Sundays.');
-        return;
-      }
+    .grid-item video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-      const [hours, minutes] = time.split(':');
-      if (hours < 10 || (hours == 18 && minutes > 0) || hours > 18) {
-        alert('Meetings can only be booked between 10:00 AM and 6:00 PM.');
-        return;
-      }
+    .logo {
+      position: absolute;
+      top: -27px;
+      left: 12px;
+      width: 145px;
+    }
 
-      emailjs.send('service_2pp0dlj', 'template_c3t5kwf', {
-        from_name: name,
-        to_name: 'Flux Media',
-        message: message,
-        date: date,
-        time: time,
-      }).then(() => {
-        alert('Meeting request sent successfully!');
-        modal.style.display = 'none';
-      }).catch(() => {
-        alert('Failed to send meeting request. Please try again later.');
-      });
-    });
-  </script>
-</body>
-</html>
+    /* Scroll animations */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(50px);
+      transition: opacity 1.2s ease, transform 1.2s ease;
+    }
+
+    .fade-in.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* Book Meeting Section */
+    .book-meeting {
+      background-color: #222;
+      color: #fff;
+      padding: 50px 0;
+      text-align: center;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+    }
+
+    .modal-content h3 {
+      margin-top: 0;
+    }
+
+    .modal-content input,
+    .modal-content textarea,
+    .modal-content button {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    .modal-content button {
+      background-color: #222;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    .modal-content button:hover {
+      background-color: #444;
+    }
+
+    @media (max-width: 
+
+768px) {
+.grid-item {
+width: calc(50% - 10px);
+}
+
+  .modal-content {  
+    width: 95%;  
+  }  
+
+  .logo {  
+    width: 100px;  
+  }  
+}  
+
+</style> </head> <body> <img src="logo.png" alt="Logo" class="logo"> <div class="section video-container"> <video autoplay muted loop class="fade-in"> <source src="your-video.mp4" type="video/mp4"> </video> </div> <div class="section grid-container"> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-1.mp4" type="video/mp4"> </video> </div> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-2.mp4" type="video/mp4"> </video> </div> <!-- Add more grid items as needed --> </div> <div class="section book-meeting"> <h2>Book a Meeting</h2> <button onclick="openModal()">Click Here</button> </div> <div class="modal" id="modal"> <div class="modal-content"> <h3>Schedule Your Meeting</h3> <input type="text" placeholder="Your Name"> <input type="email" placeholder="Your Email"> <textarea placeholder="Message"></textarea> <button>Submit</button> <button onclick="closeModal()">Close</button> </div> </div> <script> const modal = document.getElementById("modal"); function openModal() { modal.style.display = "flex"; } function closeModal() { modal.style.display = "none"; } // Scroll animations const fadeInElements = document.querySelectorAll(".fade-in"); window.addEventListener("scroll", () => { fadeInElements.forEach(el => { const rect = el.getBoundingClientRect(); if (rect.top <= window.innerHeight) { el.classList.add("active"); } }); }); </script> </body> </html> 
+      padding: 0 20px;
+    }
+
+    .grid-item {
+      width: calc(25% - 15px);
+      aspect-ratio: 9 / 16;
+      overflow: hidden;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .grid-item video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .logo {
+      position: absolute;
+      top: -27px;
+      left: 12px;
+      width: 145px;
+    }
+
+    /* Scroll animations */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(50px);
+      transition: opacity 1.2s ease, transform 1.2s ease;
+    }
+
+    .fade-in.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* Book Meeting Section */
+    .book-meeting {
+      background-color: #222;
+      color: #fff;
+      padding: 50px 0;
+      text-align: center;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+    }
+
+    .modal-content h3 {
+      margin-top: 0;
+    }
+
+    .modal-content input,
+    .modal-content textarea,
+    .modal-content button {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    .modal-content button {
+      background-color: #222;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    .modal-content button:hover {
+      background-color: #444;
+    }
+
+    @media (max-width: 
+
+768px) {
+.grid-item {
+width: calc(50% - 10px);
+}
+
+  .modal-content {  
+    width: 95%;  
+  }  
+
+  .logo {  
+    width: 100px;  
+  }  
+}  
+
+</style> </head> <body> <img src="logo.png" alt="Logo" class="logo"> <div class="section video-container"> <video autoplay muted loop class="fade-in"> <source src="your-video.mp4" type="video/mp4"> </video> </div> <div class="section grid-container"> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-1.mp4" type="video/mp4"> </video> </div> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-2.mp4" type="video/mp4"> </video> </div> <!-- Add more grid items as needed --> </div> <div class="section book-meeting"> <h2>Book a Meeting</h2> <button onclick="openModal()">Click Here</button> </div> <div class="modal" id="modal"> <div class="modal-content"> <h3>Schedule Your Meeting</h3> <input type="text" placeholder="Your Name"> <input type="email" placeholder="Your Email"> <textarea placeholder="Message"></textarea> <button>Submit</button> <button onclick="closeModal()">Close</button> </div> </div> <script> const modal = document.getElementById("modal"); function openModal() { modal.style.display = "flex"; } function closeModal() { modal.style.display = "none"; } // Scroll animations const fadeInElements = document.querySelectorAll(".fade-in"); window.addEventListener("scroll", () => { fadeInElements.forEach(el => { const rect = el.getBoundingClientRect(); if (rect.top <= window.innerHeight) { el.classList.add("active"); } }); }); </script> </body> </html> 
+      width: calc(25% - 15px);
+      aspect-ratio: 9 / 16;
+      overflow: hidden;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .grid-item video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .logo {
+      position: absolute;
+      top: -27px;
+      left: 12px;
+      width: 145px;
+    }
+
+    /* Scroll animations */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(50px);
+      transition: opacity 1.2s ease, transform 1.2s ease;
+    }
+
+    .fade-in.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    /* Book Meeting Section */
+    .book-meeting {
+      background-color: #222;
+      color: #fff;
+      padding: 50px 0;
+      text-align: center;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+    }
+
+    .modal-content h3 {
+      margin-top: 0;
+    }
+
+    .modal-content input,
+    .modal-content textarea,
+    .modal-content button {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    .modal-content button {
+      background-color: #222;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+
+    .modal-content button:hover {
+      background-color: #444;
+    }
+
+    @media (max-width: 
+
+768px) {
+.grid-item {
+width: calc(50% - 10px);
+}
+
+  .modal-content {  
+    width: 95%;  
+  }  
+
+  .logo {  
+    width: 100px;  
+  }  
+}  
+
+</style> </head> <body> <img src="logo.png" alt="Logo" class="logo"> <div class="section video-container"> <video autoplay muted loop class="fade-in"> <source src="your-video.mp4" type="video/mp4"> </video> </div> <div class="section grid-container"> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-1.mp4" type="video/mp4"> </video> </div> <div class="grid-item"> <video autoplay muted loop> <source src="grid-video-2.mp4" type="video/mp4"> </video> </div> <!-- Add more grid items as needed --> </div> <div class="section book-meeting"> <h2>Book a Meeting</h2> <button onclick="openModal()">Click Here</button> </div> <div class="modal" id="modal"> <div class="modal-content"> <h3>Schedule Your Meeting</h3> <input type="text" placeholder="Your Name"> <input type="email" placeholder="Your Email"> <textarea placeholder="Message"></textarea> <button>Submit</button> <button onclick="closeModal()">Close</button> </div> </div> <script> const modal = document.getElementById("modal"); function openModal() { modal.style.display = "flex"; } function closeModal() { modal.style.display = "none"; } // Scroll animations const fadeInElements = document.querySelectorAll(".fade-in"); window.addEventListener("scroll", () => { fadeInElements.forEach(el => { const rect = el.getBoundingClientRect(); if (rect.top <= window.innerHeight) { el.classList.add("active"); } }); }); </script> </body> </html> 
